Fix jumping checkboxes on Gravity Forms

--- a/wp-content/themes/beaverwarrior/components/FormItem/FormItem--skeleton_warrior.less
+++ b/wp-content/themes/beaverwarrior/components/FormItem/FormItem--skeleton_warrior.less
@@ -19,6 +19,10 @@
     .FormItem--actions !important;
 }
 
+.gform_wrapper .gfield input:focus {
+    height: @FormItem--height;
+}
+
 body .gform_wrapper input:not([type="radio"]):not([type="checkbox"]):not([type="image"]):not([type="file"]) {
     line-height: 1.42857;
 }
